# cbn_core

./: .gitignore  .pre-commit-config.yaml  AUDIT_API.md  Makefile  README.md  main_gerador.py  main_processor.py  pyproject.toml  reproduce_issue.py  requirements.txt  run_job.sbatch  unit_procesador.py
.github/workflows/: ci.yml
cbn_cpp/: CMakeLists.txt  README_HPC.md
cbn_cpp/examples/: campaign_runner.cpp  experiment_runner.cpp  run_pipeline.cpp  scientific_benchmarking.cpp  strategic_campaign.cpp  test_parity.cpp  unit_tests.cpp  verify_cbn.cpp
cbn_cpp/include/cbnetwork/: campaign_manager.hpp  cbnetwork.hpp  cnflist.hpp  coupling.hpp  customtext.hpp  directededge.hpp  experiment_strategies.hpp  globalnetwork.hpp  globalscene.hpp  globaltopology.hpp  internalvariable.hpp  localnetwork.hpp  localscene.hpp  localtemplates.hpp  network_factory.hpp
cbn_cpp/src/: campaign_manager.cpp  cbnetwork.cpp  directededge.cpp  experiment_strategies.cpp  globaltopology.cpp  localnetwork.cpp  localscene.cpp  network_factory.cpp
cbn_python/tests/: test_brute_force.py  test_cartesian.py  test_cbn_fields.py  test_cbn_validation.py  test_cbnetwork.py  test_compare_attractors.py  test_coupling.py  test_directededge.py  test_globalnetwork.py  test_globaltopology.py  test_localnetwork.py  test_localnetwork_attractors.py  test_localnetwork_logic.py  test_localtemplates.py
experiments/mix/: aleatory_fixed.json  cbn_python_gen.py  cbn_python_solver.py  circular.json  main_gerador.py  main_processor_py_cpp.py  (+2 more)
scripts/: final_parity.py  parity_validation.py  quick_parity.py
(+111 files in other folders)
